--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   overflow: hidden;
+  background-color: "#ec7063";
 }
 
 .pomodoro-title {
@@ -8,6 +9,7 @@ body {
   font-size: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
+  color: white;
 }
 
 .row-title {
@@ -58,7 +60,7 @@ body {
 }
 
 .long-break-button{
-  background-color: #76d7c4;
+  background-color: #f9e79f;
 }
 
 .pixel-button:active {
@@ -66,21 +68,21 @@ body {
   transform: translate(4px, 4px);
 }
 
-
 .timer-row {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .time-label{
   font-family: 'Press Start 2P', monospace;
   font-size: 30px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: white;
 }
 
 .time{
@@ -91,10 +93,10 @@ body {
 }
 
 .time-input {
-  height: 40px;
-  width: 100px;
+  height: 50px;
+  width: 130px;
   font-family: 'Press Start 2P', monospace;
-  font-size: 15px;
+  font-size: 20px;
   border: 2px solid #000;
   box-shadow: 2px 2px 0 #000;
   display: flex;
